refactor(index.html): changing title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/public/br.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    
-    <title>Vite + React + TS</title>
+    <title>Brandon-Fidelin</title>
   </head>
   <body class='bg-blue-950'>
     <div  id="root">
