ref: change header btn text add: scroll behavior smooth

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <link rel="stylesheet" href="https://preline.co/assets/css/main.css?v=3.0.0">
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-neutral-900">
+  <style>
+    *{
+      scroll-behavior: smooth;
+    }
+  </style>
+  <body class="bg-neutral-900 scroll-smooth">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
