chore: add preline js file cdn

--- a/index.html
+++ b/index.html
@@ -7,21 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Theme Check and Update -->
-    <script>
-      const html = document.querySelector('html');
-      const isLightOrAuto = localStorage.getItem('hs_theme') === 'light' || (localStorage.getItem('hs_theme') === 'auto' && !window.matchMedia('(prefers-color-scheme: dark)').matches);
-      const isDarkOrAuto = localStorage.getItem('hs_theme') === 'dark' || (localStorage.getItem('hs_theme') === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches);
-  
-      if (isLightOrAuto && html.classList.contains('dark')) html.classList.remove('dark');
-      else if (isDarkOrAuto && html.classList.contains('light')) html.classList.remove('light');
-      else if (isDarkOrAuto && !html.classList.contains('dark')) html.classList.add('dark');
-      else if (isLightOrAuto && !html.classList.contains('light')) html.classList.add('light');
-    </script>
+
   
     <!-- CSS Preline -->
     <link rel="stylesheet" href="https://preline.co/assets/css/main.css?v=3.0.0">
     <title>Vite + React + TS</title>
   </head>
+  
   <style>
     *{
       scroll-behavior: smooth;
@@ -29,6 +21,9 @@
   </style>
   <body class="bg-neutral-900 scroll-smooth">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/preline/dist/index.js"></script>
+
   </body>
+  
 </html>
