--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
     <!-- CSS Preline -->
     <link rel="stylesheet" href="https://preline.co/assets/css/main.css?v=3.0.0">
-    <title>Vite + React + TS</title>
+    <title>Brandon Fidelin</title>
   </head>
   
   <style>
